<resources>
    <string name="app_name">Coffeeshoponline</string>
    <string name="choice_your_nfavorite_coffee">Choice your \nFavorite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_order">My order</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="_0">0</string>
    <string name="enter_your_coupon_code">Enter Your Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>