<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_gravity="bottom">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        app:itemRippleColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/navExplorer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivExplorer"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/btn_1" />

                <TextView
                    android:id="@+id/tvExplorer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/explorer"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivCart"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/btn_2" />

                <TextView
                    android:id="@+id/tvCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/cart"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navWishlist"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivWishlist"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/btn_3" />

                <TextView
                    android:id="@+id/tvWishlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/wishlist"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navOrders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivOrders"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/btn_4" />

                <TextView
                    android:id="@+id/tvOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/my_order"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/btn_5" />

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>